--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="magnific-popup.css">
     
     <link rel="stylesheet" href="flaticon.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=".style.css">
   </head>
   <body>
     
